# justtwod

./: .gitignore  MANIFEST.md  README.md
mcp_server/: README.md  pyproject.toml
mcp_server/src/justtwod/: __init__.py  _app.py  server.py  smoke.py  transport.py
mcp_server/src/justtwod/tools/: __init__.py  _jsx_helpers.py  adjustment.py  canvas.py  core.py  document.py  history.py  inspection.py  layer.py  mask.py  mockup.py  selection.py  shape.py  smart_object.py  text.py  transform.py
